# nightmare-archive

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  compile_commands.json  go.mod  go.sum  imgui.ini  main.cc  main.cpp  makefile  opengl.h
.cache/clangd/index/: boing.c.C58022AFE5FBB4A0.idx  clipboard.c.11EEB804ABA0270B.idx  context.c.72B9B76AE8813225.idx  cursor.c.FD789048E9813FB4.idx  egl_context.c.BEC2328706D97052.idx  egl_context.h.76321967C015664D.idx  empty.c.C11C17B03272107E.idx  events.c.42BAB8F2758EB54C.idx  gamma.c.92FFC27283F0F6B5.idx  gears.c.3530F64A87A52BE7.idx  getopt.c.70EEE91244A066FF.idx  getopt.h.A66EEB5112BB89AC.idx  gl.h.2E99D5818BE42977.idx  glad.c.5EBDD4FC2A907E5F.idx  glad.h.C683FCB41BD5A266.idx  glad_gl.c.2A16B01182E00A0D.idx  glad_vulkan.c.D11532030A838185.idx  glfw3.h.229ABA296AC1D46E.idx  glfw_config.h.3ED4F2FCFE261482.idx  glfwinfo.c.359FCE6C1112C55C.idx  glx_context.c.AEE5A1C5C226C63E.idx  glx_context.h.4EE6375ECFF356FC.idx  heightmap.c.642B9438CF7C99F1.idx  icon.c.11F67EC836263976.idx  iconify.c.DC03AB62ADA899A8.idx  init.c.AF81D88D72CD8312.idx  input.c.CF35160189BE74E6.idx  inputlag.c.EF2E25A6B05A57D8.idx  internal.h.378DE95D29F8599C.idx  joysticks.c.F98C82749BA02D2E.idx  khrplatform.h.CF0E254E6B403611.idx  khrplatform.h.CFAF1204616AC35C.idx  linmath.h.4E5D93A44B2265A7.idx  linux_joystick.c.47CB63D7C40FC662.idx  linux_joystick.h.A6826DE7FF961C92.idx  main.cc.0F4E8AABDBE40B38.idx  mappings.h.AF5E6D2A8BCAC842.idx  monitor.c.BB501076DAF68185.idx  monitors.c.036B84605469A1F8.idx  msaa.c.3FBCD7C83FBFE2CC.idx  (+36 more)
assets/: characters.go  indoors.go  outdoors.go
cmake/: libigl.cmake
cmd/game/: main.go
renderer/: Cargo.toml
renderer/include/renderer/: renderer.h
renderer/include/window/: window.h
renderer/opengl/: README.md
renderer/opengl/include/opengl/: shader.h  shader_program.h
renderer/src/: lib.rs  shader.rs
renderer/src/camera/: basic_camera.rs  camera_base.rs  mod.rs  spherical.rs
renderer/vulkan/: README.md
scripts/: build.sh  clean  compile  configure  run  run.sh  test
shaders/: core.frag.glsl  core.vert.glsl
src/: camera.cc  camera.h  geometry.cc  geometry.h  input.cc  input.h  math.h  mesh.cc  mesh.h  mouse_control.cc  mouse_control.h  nightmare.cc  nm_io.cc  nm_io.h  nm_math.h  opengl.h  renderer.cc  renderer.h  renderer_utils.cc  renderer_utils.h  resources.cc  resources.h  shader.cc  shader.h  shader_program.cc  shader_program.h  simulation.cc  simulation.h  visualization.cc  visualization.h  visualization_menu.cc  visualization_menu.h  visualization_vars.cc  visualization_vars.h  window.cc  window.h
src/fem/: T_linear_tetrahedron.cc  T_linear_tetrahedron.h  V_linear_tetrahedron.cc  V_linear_tetrahedron.h  assemble.cc  assemble.h  d2V_linear_tetrahedron_dq2.cc  d2psi_neo_hookean_dF2.cc  d2psi_neo_hookean_dF2.h  d2v_linear_tetrahedron_dq2.cc  d2v_linear_tetrahedron_dq2.h  dV_linear_tetrahedron_dq.cc  dV_linear_tetrahedron_dq.h  dphi_linear_tetrahedron_dX.cc  dphi_linear_tetrahedron_dX.h  dpsi_neo_hookean_dF.cc  dpsi_neo_hookean_dF.h  external_forces.cc  external_forces.h  integrators_implicit_euler.cc  integrators_implicit_euler.h  linear_energy_function.cc  linear_energy_function.h  linear_spring_potential_energy.cc  linear_tetrahedron_basis_function_gradient_matrix.cc  linear_tetrahedron_basis_function_gradient_matrix.h  linear_tetrahedron_basis_functions.cc  linear_tetrahedron_basis_functions.h  linear_tetrahedron_kinetic_energy.cc  linear_tetrahedron_kinetic_energy.h  linear_tetrahedron_potential_energy.cc  linear_tetrahedron_potential_energy.h  linear_tetrahedron_potential_energy_gradient_wrt_q.cc  linear_tetrahedron_potential_energy_gradient_wrt_q.h  linear_tetrahedron_potential_energy_hessian_wrt_q.cc  linear_tetrahedron_potential_energy_hessian_wrt_q.h  mass_matrix_linear_tetmesh.cc  mass_matrix_linear_tetmesh.h  mass_matrix_linear_tetrahedron.cc  mass_matrix_linear_tetrahedron.h  (+16 more)
src/geometry/: constraints.h  kinematic_object.cc  kinematic_object.h  tet_mesh.cc  tet_mesh.h
src/geometry/primitives/: cube.cc  cube.h  grid.cc  grid.h  square.cc  square.h
src/hyperelastic/: neo_hookean.cc  neo_hookean.h  stable_neo_hookean.cc  stable_neo_hookean.h
src/integrators/: backward_euler.cc  backward_euler.h  integrator.cc  integrator.h  integrator_state.h
src/scenes/: drop.cc  drop.h  paths.h  scene.cc  scene.h
tests/: CMakeLists.txt  geometry_test.cc  math_test.cc  renderer_utils_test.cc
visor/: Cargo.toml
visor/src/: main.rs
